# Paibot

./: .gitignore  ALGORITHMS.md  BACKGROUND_GENERATOR.md  CMakeLists.txt  INTEGRITY_SUMMARY.md  LICENSE  README.md  mod.json  test_implementation.py
.github/workflows/: build.yml
bot/: __init__.py  chatbot.py  command_docs.py  memory.py  persona.py
commands/: background.md  gradient.md  optimizer.md
examples/: background_generator_demo.cpp
include/Paibot/manager/: BrushManager.hpp  PackManager.hpp  ToolManager.hpp
include/Paibot/ui/: MenuItemTogglerExtra.hpp  PaibotButtonBar.hpp
include/Paibot/util/: BackgroundGenerator.hpp  BrushDrawer.hpp  GradientBrushDrawer.hpp  IntegrityLogger.hpp  LineBrushDrawer.hpp  StructureOptimizer.hpp
resources/: manifest.json
resources/packs/: example_pack.json
resources/presets/: default_background.json  wang_tiles_seamless.json
resources/sounds/: README.md
resources/textures/: README.md
scripts/: run_paibot.py  test_determinism.py  validate_integrity.py
src/: main.cpp
src/manager/: BrushManager.cpp  PackManager.cpp  ToolManager.cpp
src/ui/: MenuItemTogglerExtra.cpp  PaibotButtonBar.cpp
src/util/: BackgroundGenerator.cpp  BrushDrawer.cpp  GradientBrushDrawer.cpp  IntegrityLogger.cpp  LineBrushDrawer.cpp  StructureOptimizer.cpp
